# autorec

./: .gitignore  .gitmodules  BOUNDARY_FINDER.md  CONFIGURATION.md  Cargo.toml  pipewire_utils.py  record.py  vu_meter.py
debian/: changelog  control  rules
man/: autorecord.1  cue_creator.1  pause_analyzer.1  vu_meter.1
python/: riaa.py  vu_meter.py
src/: album_finder.rs  album_identifier.rs  audio_analysis.rs  audio_stream.rs  config.rs  cuefile.rs  decibel.rs  discogs.rs  display.rs  lib.rs  lookup.rs  lookup_discogs.rs  lookup_musicbrainz.rs  musicbrainz.rs  pause_detector.rs  pipewire_utils.rs  rate_limiter.rs  recorder.rs  shazam.rs  song_detect.rs  songrec_cache.rs  vu_meter.rs  wavfile.rs
src/detection_strategies/: absolute_threshold.rs  energy_ratio.rs  guided.rs  mod.rs  relative_drop.rs  transition.rs
