[package]
name = "autorec"
version = "0.1.2"
edition = "2021"

[dependencies]
symphonia = { version = "0.5", features = ["mp3", "flac", "wav"] }
pipewire = "0.8"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[lib]
name = "autorec"
path = "src/lib.rs"

[[bin]]
name = "vu_meter"
path = "src/bin/vu_meter.rs"

[[bin]]
name = "autorecord"
path = "src/bin/autorecord.rs"

[[bin]]
name = "show_sources"
path = "src/bin/show_sources.rs"

[[bin]]
name = "test_pipewire"
path = "src/bin/test_pipewire.rs"
