[package]
name = "autorec"
version = "0.1.4"
edition = "2021"

[dependencies]
symphonia = { version = "0.5", features = ["mp3", "flac", "wav"] }
pipewire = "0.8"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Shazam fingerprinting (from shazamio-core)
chfft = "0.3.4"
rodio = { version = "0.20", default-features = false, features = ["wav", "mp3", "flac", "vorbis"] }
base64 = "0.22"
byteorder = "1.5"
crc32fast = "1.4"
tempfile = "3"

# Shazam API client
ureq = { version = "2", features = ["json"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"

[lib]
name = "autorec"
path = "src/lib.rs"

[[bin]]
name = "vu_meter"
path = "src/bin/vu_meter.rs"

[[bin]]
name = "autorecord"
path = "src/bin/autorecord.rs"

[[bin]]
name = "show_sources"
path = "src/bin/show_sources.rs"

[[bin]]
name = "test_pipewire"
path = "src/bin/test_pipewire.rs"

[[bin]]
name = "pause_analyzer"
path = "src/bin/pause_analyzer.rs"
